--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="page-header">
                     <h1>About</h1>
                 </div>
-        <img src="./images/profile.png" width="250em" height="300em" class="img-rounded col-md-2"><br/>
+        <img src="./images/profile.PNG" width="250em" height="300em" class="img-rounded col-md-2"><br/>
         <p> Hello and welcome to my website! <br/> I'm a 3rd year college student attending the University of California - Irvine and I'm studying Informatics with 
             a minor in ICS.<br/> I like coding, designing graphics, and volunteering at KUCI. 
         </p>
