Added link for download
Resume pdf included in about section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
         <img src="./images/profile.PNG" width="250em" height="300em" class="img-rounded col-md-2"><br/>
         <p> Hello and welcome to my website! <br/> I'm a 3rd year college student attending the University of California - Irvine and I'm studying Informatics with 
-            a minor in ICS.<br/> I like coding, designing graphics, and volunteering at KUCI. 
+            a minor in ICS.<br/> I like coding, designing graphics, and volunteering at KUCI. <br/><br/> <a href="./resume.pdf" download>Resume download</a>
         </p>
         <p id="social_media">
             <a href="https://www.linkedin.com/in/amandajh12/"> <img src="./images/linkedin.png" alt="LinkedIn"></a>
