Added art graphics
adjusted layout

--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@
         <p> Hello and welcome to my website! <br/> I'm a 3rd year college student attending the University of California - Irvine and I'm studying Informatics with 
             a minor in ICS.<br/> I like coding, designing graphics, and volunteering at KUCI. <br/><br/> <a href="./resume.pdf" download>Resume download</a>
         </p>
-        <p id="social_media">
+        <p class="col-md-6" id="social_media">
             <a href="https://www.linkedin.com/in/amandajh12/"> <img src="./images/linkedin.png" alt="LinkedIn"></a>
             <a href="https://www.facebook.com/amvndajh12" ><img src="./images/fb.png" alt="Facebook"></a>
             <a href="https://twitter.com/amandajh12_"> <img src="./images/twitter.png" alt="Twitter"></a>
             <a href="https://github.com/amandajh12"><img src="./images/github.png" alt="GitHub"></a>
             <a href="https://open.spotify.com/user/amvnduh"><img src="./images/spotify.png" alt="Spotify"></a>
         </p>
+        <div class="col-md-4 thumbnail">
+                <img class="img-thumbnail" src="./images/popupShop.gif" alt="KUCI Pop Up Shop Gif">
+                <div class="caption"><h4>KUCI Pop Up Shop Gif</h4></div>
+            </div>
     </div>
     <div class="container-fluid bg-1" id="section1">
             <div class="page-header"><h1>Tech</h1></div>
@@ -85,8 +89,16 @@
                 </div>
                 <div class="col-md-4 thumbnail">    
                     <img class="img-thumbnail" src="./images/halloween17.jpg" alt="KUCI Halloween Graphic">
-                    <div class="caption"><h4>KUCI Halloween Graphic</h4></div>  
+                    <div class="caption"><h4>KUCI Halloween Graphic</h4></div> 
             </div>
+            <div class="col-md-4 thumbnail">
+                    <img class="img-thumbnail" src="./images/vday_header_2018_2.png" alt="KUCI Valentines Day Graphic">
+                    <div class="caption"><h4>KUCI Valentines Graphic</h4></div>
+            </div>
+            <div class="col-md-4 thumbnail">
+                    <img class="img-thumbnail" src="./images/lemonadegiveaway.png" alt="KUCI Valentines Day Giveaway">
+                    <div class="caption"><h4>Valentines Lemonade Giveaway</h4></div>
+                </div>
         </div>
     </body>
 
