--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
                     <img class="img-thumbnail" src="./images/lemonadegiveaway.png" alt="KUCI Valentines Day Giveaway">
                     <div class="caption"><h4>Valentines Lemonade Giveaway</h4></div>
                 </div>
+                <div class="col-md-4 thumbnail">
+                        <img class="img-thumbnail" src="./images/popup_edit-10.png" alt="KUCI Pop Up Shop Winter Quarter 2018">
+                        <div class="caption"><h4>KUCI Pop Up Shop Winter Quarter 2018</h4></div>
+                    </div>
         </div>
     </body>
 
