updated website - sept 25, 2018

--- a/index.html
+++ b/index.html
@@ -1,114 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
+<DOCTYPE! html>
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./index.css">
     <title>Amanda's Site</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-<link rel="stylesheet" href="./index.css">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </head>
-  <body data-spy="scroll" data-target=".navbar" data-offset="50">
-    <nav class="navbar navbar-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Amanda Hernandez</a>
-        </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="#about-section">About</a></li>
-                    <li><a href="#section1">Tech</a></li>
-                    <li><a href="#section2">Music</a></li>
-                    <li><a href="#section3">Art</a></li>
-                </ul>
-            </div>
-     </nav>
-    <div class="jumbotron">
-        <h1 class="text-center">Amanda Hernandez</h1>
-        <p class="text-center" id="intro-blurb">Programmer, Graphic Designer, & Radio DJ</p>
-        <p class="text-center"><a class="btn btn-primary btn-lg" href="#about-section" role="button">Learn more</a></p>
-    </div>
-    <div class="container-fluid bg-1" id="about-section">
-            <div class="page-header">
-                    <h1>About</h1>
-                </div>
-        <img src="./images/profile.PNG" width="250em" height="300em" class="img-rounded col-md-2"><br/>
-        <p> Hello and welcome to my website! <br/> I'm a 3rd year college student attending the University of California - Irvine and I'm studying Informatics with 
-            a minor in ICS.<br/> I like coding, designing graphics, and volunteering at KUCI. <br/><br/> <a href="./resume.pdf" download>Resume download</a>
-        </p>
-        <p class="col-md-6" id="social_media">
-            <a href="https://www.linkedin.com/in/amandajh12/"> <img src="./images/linkedin.png" alt="LinkedIn"></a>
-            <a href="https://www.facebook.com/amvndajh12" ><img src="./images/fb.png" alt="Facebook"></a>
-            <a href="https://twitter.com/amandajh12_"> <img src="./images/twitter.png" alt="Twitter"></a>
-            <a href="https://github.com/amandajh12"><img src="./images/github.png" alt="GitHub"></a>
-            <a href="https://open.spotify.com/user/amvnduh"><img src="./images/spotify.png" alt="Spotify"></a>
-        </p>
-        <div class="col-md-4 thumbnail">
-                <img class="img-thumbnail" src="./images/popupShop.gif" alt="KUCI Pop Up Shop Gif">
-                <div class="caption"><h4>KUCI Pop Up Shop Gif</h4></div>
-            </div>
-    </div>
-    <div class="container-fluid bg-1" id="section1">
-            <div class="page-header"><h1>Tech</h1></div>
-            <p>
-                I've worked on school projects for the past 2 years and I'm currently working with a team on products that will assist the Society of Hispanic Engineers (SHPE), such as 
-                a text message reminder system to alert all SHPE members of events/news. This summer 2018 I'm looking to work on challenging backend projects. 
-            </p>
-    </div>
-    <div class="container-fluid bg-1" id="section2">
-        <div class="page-header"><h1>Music</h1></div>
-                <img class="img-thumbnail" src="./images/spookymanda.jpg" width="600em" height="600em" >
-                <div class="col-md-6"><p>Everyone likes music, to no surprise, which is why I didn't think much of me being obsessed with different pop stars and watching musical tv shows growing up. 
-                But once I found my way to the radio station on campus, I knew this had to mean a little more. My freshmen year I was torn between where to invest my time; I had just joined the 
-                training class for KUCI but I was also involved in other clubs that I realized I just didn't care about anymore. At this time, in that magical December of 2016, I listened to Childish Gambino's 
-                Awaken! My Love. By the time I got to <i>Stand Tall</i> and I heard the chorus... "Keep all your dreams, keep standing tall...", it was over. It hit me. I went all in and finished my demo tape and got
-                a radio show called Belly of the Beat on KUCI 88.9 FM in Irvine. From there, I've maintained my show for about a year now. I've sound engineered for bands that perform live in our station, and this 
-                past fall, I helped sound engineer for an event for the first time. I'm also Assistant Marketing Director and my goal is to help to bring more cool events and build up the KUCI brand
-                as the underground pirate radio station of the Orange County area that it has been for over 40 years. <br/><br/>
-                <p>Find all my Spotify playlists of music I've played over the radio airwaves here.</p><a href="https://djspookymanda.tumblr.com">Belly of the Beat Website</a><br/><br/>
-                KUCI Spotlight Interview<br/><a href="http://kuci.org/show_feature.cgi?id=1697">KUCI Spotlight</a>
-                </p></div>
-    </div>
-    <div class="container-fluid bg-1" id="section3">
-            <div class="page-header"><h1>Art</h1></div>
-            <p class="col-md-4" >I've always drawn and painted in my free time for as long as I can remember. Now that I'm Assistant Marketing Director at KUCI, I doodle different logos and flyers to market the station to our
-                community. Naturally, as I've leaned towards computers and technology, I've been spending my time using and learning Adobe Illustrator to create graphics like these. 
-            </p>
-                <div class="col-md-4 thumbnail">
-                    <img class="img-thumbnail" src="./images/kuci_winter18_fixed.png" alt="oops">
-                    <div class="caption"><h4>KUCI Winter Graphic</h4></div>
-                </div>
-                <div class="col-md-4 thumbnail">    
-                    <img class="img-thumbnail" src="./images/halloween17.jpg" alt="KUCI Halloween Graphic">
-                    <div class="caption"><h4>KUCI Halloween Graphic</h4></div> 
-            </div>
-            <div class="col-md-4 thumbnail">
-                    <img class="img-thumbnail" src="./images/vday_header_2018_2.png" alt="KUCI Valentines Day Graphic">
-                    <div class="caption"><h4>KUCI Valentines Graphic</h4></div>
-            </div>
-            <div class="col-md-4 thumbnail">
-                    <img class="img-thumbnail" src="./images/lemonadegiveaway.png" alt="KUCI Valentines Day Giveaway">
-                    <div class="caption"><h4>Valentines Lemonade Giveaway</h4></div>
-                </div>
-                <div class="col-md-4 thumbnail">
-                        <img class="img-thumbnail" src="./images/popup_edit-10.png" alt="KUCI Pop Up Shop Winter Quarter 2018">
-                        <div class="caption"><h4>KUCI Pop Up Shop Winter Quarter 2018</h4></div>
-                    </div>
-        </div>
-    </body>
+  <body>
+    <div id="header">
+      <ul id="nav-bar">
+          <li class="nav-bar-links" style="float: right;"><a href="https://www.instagram.com/jumpmanda_/">Instagram</a></li>
+          <li class="nav-bar-links" style="float: right;"><a href="https://twitter.com/amandajh12_">Twitter</a></li>
+          <li class="nav-bar-links" style="float: right;"><a href="https://www.linkedin.com/in/amandajh12/">LinkedIn</a></li>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    </div>
+    <div id="landing">
+      <div id="jumbo-div" class="jumbotron container-fluid">
+        <div class="container">
+          <img src="./images/amanda_logo@2x.png" height="15%" width="40%" ></img>
+          <p class="lead">Software engineer, college radio DJ, and graphic designer.</p>
+          <!--<input text="Learn more" type="button" onClick="document.getElementById('middle').scrollIntoView();" />-->
+
+        </div>
+      </div>
+      <div id="jumbo-div-transparent">
+        <img id="profilepic" src="./images/profile.PNG"></img>
+      </div>
+    </div>
+    <div id="middle">
+      <h1>About</h1>
+        <ul>
+          <li>4th year student at UC Irvine, graduating March 2019, studying Informatics</li>
+          <li>Full stack developer, with some dev-ops experience</li>
+          <li>Host of Belly of the Beat - <a href="http://botb.kuci.org">botb.kuci.org</a></li>
+          <li>Loves all types of music - indie rock, funk, soul, disco, dream pop, etc</li>
+        </ul>
+        <br/>
+      <!--<p>
+        I’m passionate about experience more than anything. This is the reason why I love computer science, art and music so much.
+        I love that building technology doesn’t exist in it’s own vacuum but that we build tools with a purpose and for a group of people.
+        I also love change and learning. I love that there is so much to learn in computer science. That being said, my skills are sporadic. I’ve used different tools and languages for different projects that I’ve worked on.
+      </p>
+      <p>
+        No matter which technologies I use, I enjoy full stack development because I like seeing something that I’ve built on the backend, come around full circle into a product that someone can use.
+        And now after my summer internship at Mitchell, I’ve been exposed to the operational side of the software development life cycle and I've seen what it takes to monitor and maintain software.
+        After getting a taste for this, I know that I’d like to pursue a career doing backend engineering.
+      </p>
+    </div>-->
+
+
+
   </body>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </html>
