added resume download link

--- a/index.html
+++ b/index.html
@@ -35,20 +35,11 @@
           <li>Loves all types of music - indie rock, funk, soul, disco, dream pop, etc</li>
         </ul>
         <br/>
-      <!--<p>
-        I’m passionate about experience more than anything. This is the reason why I love computer science, art and music so much.
-        I love that building technology doesn’t exist in it’s own vacuum but that we build tools with a purpose and for a group of people.
-        I also love change and learning. I love that there is so much to learn in computer science. That being said, my skills are sporadic. I’ve used different tools and languages for different projects that I’ve worked on.
-      </p>
-      <p>
-        No matter which technologies I use, I enjoy full stack development because I like seeing something that I’ve built on the backend, come around full circle into a product that someone can use.
-        And now after my summer internship at Mitchell, I’ve been exposed to the operational side of the software development life cycle and I've seen what it takes to monitor and maintain software.
-        After getting a taste for this, I know that I’d like to pursue a career doing backend engineering.
-      </p>
-    </div>-->
-
-
-
+  </div>
+  <div id="resume">
+    <a href="./resume.pdf" download><h3>Resume Download</h3></a>
+  </div>
+  <div id="art1"><img src="./images/kuci_primary.png"></img></div>
   </body>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
