--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <li>Full stack developer, with some dev-ops experience</li>
           <li>Host of Belly of the Beat - <a href="http://botb.kuci.org">botb.kuci.org</a></li>
           <li>Loves all types of music - indie rock, funk, soul, disco, dream pop, etc</li>
+          <li>Hungry to keep learning and build quality products</li>
         </ul>
         <br/>
   </div>
